# jupyter-server-mcp

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: check-release.yml  tests.yml
examples/: README.md  jupyter_config_with_execution_tools.py
jupyter-config/jupyter_server_config.d/: jupyter_server_docs_mcp.json  jupyter_server_mcp.json
jupyter_server_docs_mcp/: __init__.py  extension.py  mcp_server.py
jupyter_server_mcp/: __init__.py  extension.py  mcp_server.py  notebook_execution_tools.py
tests/: __init__.py  conftest.py  test_extension.py  test_mcp_server.py  test_notebook_execution_tools.py
